<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    tools:context="com.praveenupadrasta.news.Login.LoginActivity">

    <RelativeLayout
        android:id="@+id/rel_reg_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rel_login_info_margin_top"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="@dimen/edit_text_width_login"
            android:layout_height="@dimen/edit_text_height_login"
            android:background="@drawable/edittext_modified_states"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="@dimen/edit_text_width_login"
            android:layout_height="@dimen/edit_text_height_login"
            android:background="@drawable/edittext_modified_states"
            android:layout_below="@id/txt_email"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />
    </RelativeLayout>
        <TextView
            android:id="@+id/lbl_error_email"
            android:layout_width="@dimen/edit_text_width_login"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_reg_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="Email is invalid!"
            android:visibility="gone"
            android:textSize="@dimen/rel_newuser_forgotpassword_txt_size"
            android:textColor="@android:color/holo_red_dark"
            />
        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_error_email"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_background_states"
            android:textColor="@android:color/white"
            android:padding="@dimen/login_btn_padding"
            android:textStyle="bold"
            android:textSize="@dimen/login_btn_txt_size"
            android:text="@string/register"/>
</RelativeLayout>
