<RelativeLayout android:id="@+id/relLanslideDetection"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.praveenupadrasta.news.DetectionAndHistory.TabbedActivity$PlaceholderFragment"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/relDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgDateTime"
            android:layout_width="@dimen/edit_text_height_login"
            android:layout_height="@dimen/edit_text_height_login"
            android:src="@drawable/datetime"/>
        <TextView
            android:id="@+id/lblDateTime"
            android:textSize="@dimen/date_time_size"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/imgDateTime"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <!--<TextView-->
            <!--android:textSize="@dimen/date_time_size"-->
            <!--android:id="@+id/lblTime"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:text="@string/time"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@android:color/black"-->
            <!--/>-->
    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_below="@id/relDateTime"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_height"/>

    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/map"-->
        <!--android:layout_below="@id/relDateTime"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/map_height"-->
        <!--android:name="com.google.android.gms.maps.SupportMapFragment" />-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/map"
        android:layout_marginTop="15dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/linGaugeLevels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:id="@+id/relMoistureLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        >
                        <pl.pawelkleczkowski.customgauge.CustomGauge
                            android:id="@+id/gaugeMoistureLevel"
                            android:layout_width="@dimen/moisture_magnitude_size"
                            android:layout_height="@dimen/moisture_magnitude_size"
                            android:layout_centerHorizontal="true"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            />
                        <TextView
                            android:id="@+id/lblMoistureValue"
                            android:textColor="@android:color/black"
                            style="@android:style/TextAppearance.DeviceDefault.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                    <TextView
                        android:textSize="@dimen/lbl_value_size"
                        android:textColor="@android:color/black"
                        android:id="@+id/lblMoistureLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mositure_level"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/relMoistureLevel"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <RelativeLayout
                        android:id="@+id/relMagnitudeLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        >
                        <pl.pawelkleczkowski.customgauge.CustomGauge
                            android:id="@+id/gaugeMagnitudeLevel"
                            android:layout_width="@dimen/moisture_magnitude_size"
                            android:layout_height="@dimen/moisture_magnitude_size"
                            android:layout_centerHorizontal="true"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            />
                        <TextView
                            android:id="@+id/lblMagnitudeValue"
                            style="@android:style/TextAppearance.DeviceDefault.Large"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                    <TextView
                        android:textSize="@dimen/lbl_value_size"
                        android:textColor="@android:color/black"
                        android:id="@+id/lblMagnitudeLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/accelormeter_magnitude"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/relMagnitudeLevel"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linGaugeLevels"
                android:layout_marginTop="10dp">
                <RelativeLayout
                    android:id="@+id/relRainfall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/lbl_value_size"
                        android:textColor="@android:color/black"
                        android:id="@+id/lblRainfall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rainfall"/>
                    <TextView
                        android:textSize="@dimen/lbl_value_size"
                        android:textColor="@android:color/black"
                        android:id="@+id/lblRainfallValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/lblRainfall"
                        android:layout_marginStart="10dp"/>
                </RelativeLayout>

                <!--<RelativeLayout-->
                    <!--android:id="@+id/relMessage"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@id/relRainfall"-->
                    <!--android:layout_marginTop="10dp">-->
                    <!--<TextView-->
                        <!--android:textSize="@dimen/lbl_value_size"-->
                        <!--android:textColor="@android:color/white"-->
                        <!--android:id="@+id/lblMessage"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/message"-->
                        <!--/>-->
                    <!--<TextView-->
                        <!--android:textSize="@dimen/lbl_value_size"-->
                        <!--android:textColor="@android:color/white"-->
                        <!--android:id="@+id/lblMessageValue"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="Sample Text"-->
                        <!--android:layout_toEndOf="@id/lblMessage"-->
                        <!--android:layout_marginStart="10dp"/>-->
                <!--</RelativeLayout>-->
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>